word wrap break work prevents overflow

--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -60,6 +60,7 @@
         font-family: "Montserrat", sans-serif;
         text-transform: uppercase;
         letter-spacing: 2.6px;
+        word-wrap: break-word;
     }
     &__description {
       letter-spacing: 0.875px;
